Updated task texts and fixed message editing.

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
         <artifactId>sqlite-jdbc</artifactId>
         <version>3.28.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.lambdaworks/scrypt -->
+    <dependency>
+        <groupId>com.lambdaworks</groupId>
+        <artifactId>scrypt</artifactId>
+        <version>1.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
